photo list update

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <h2>Listen</h2>
           <audio controls>
             <source src="media/audio/monkaa_soundtrack.mp3" type="audio/mp3">
-            </audio
+          </audio>
             <!-- TODO: Embed an audio player so users can play back the
                  soundtrack MP3 directly on the page. -->
 
@@ -86,25 +86,25 @@
                  so that text stands out. -->
             <h2>About</h2>
             <p class="lead">Monkaa is a blue-furred, pink-faced monkey who consumes a crystallized meteorite, making him invincibly strong and too hot to handle. Exploring his new superpowers, Monkaa zooms through an entire universe. </p>
-           
-            <ul class="weybec-people">
+           <div id="weybec-people">
+            <ul>
                 <li>
                     <img class="headshot" src="img/weybec/pratik_solanki.png" alt="Pratik Solanki headshot"><br>
                     Pratik Solanki<br>
                     Co-Founder
-                </li>
+                </li><br>
                 <li>
                     <img class="headshot" src="img/weybec/Nita-ravalji1.png" alt="Nita Ravalji headshot"><br>
                     Nita Ravalji<br>
                     Co-Founder
-                </li>
+                </li><br>
                 <li>
                     <img class="headshot" src="img/weybec/niyal_parmar.png" alt="Niyal Parmar headshot"><br>
                     Niyal Parmar<br>
                     Co-Founder
-                </li>
+                </li><br>
             </ul>
-          
+          </div>
             <p>Monkaa is produced by <a href="http://www.weybec.com/">Weybec</a>, an animation studio located in Mumbai, India and founded by Pratik Solanki, Nita Ravalji and Niyal Parmar.</p>
 
             <p>Project Monkaa is a 5-minute short animated movie, entirely made with Blender and GIMP and other Free/Open Software programs. It has been released as an Open Movie, with all production files and tutorials available on <a href="https://cloud.blender.org/p/monkaa/">Blender Cloud</a> under a CC-BY license, as well as on a DVD available in the <a href="http://www.blender3d.org/e-shop/">Blender Store</a>.</p>
